--- a/azure-build-pipelines.yml
+++ b/azure-build-pipelines.yml
@@ -1,31 +1,38 @@
-name: 1.0.$(Rev:r)
 trigger:
   branches:
     include:
-    - main
+    - master
+  paths:
+    include:
+    - Services/DemoAPI/*
 
 pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  dockerRegistryServiceConnection: '69afecc5-ac14-478c-af6c-0c1fd1a6e437'
-  imageRepository: 'simulation/demo-api'
-  dockerfilePath: '$(Build.SourcesDirectory)/Demo.API/Dockerfile'
-  tag: '$(Build.BuildNumber)'
+  rootDirectory: 'Services/DemoAPI'
 
 steps:
 
-- task: Docker@2
-  displayName: Build and push an image to container registry
+- task: DotNetCoreCLI@2
+  displayName: 'Function - Build project'
   inputs:
-    command: buildAndPush
-    repository: $(imageRepository)
-    dockerfile: $(dockerfilePath)
-    containerRegistry: $(dockerRegistryServiceConnection)
-    tags: $(tag)
-    
+    projects: ' $(rootDirectory)/**/*.csproj'
+    arguments: '--output publish_output --configuration Release'
+- task: DotNetCoreCLI@2
+  displayName: 'Publish project'
+  inputs:
+    command: publish
+    publishWebProjects: false
+    projects: '$(rootDirectory)/**/*.csproj'
+    arguments: '--configuration Release --output $(build.artifactstagingdirectory)'
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: 'Infrastructure'
+    targetPath: '$(Build.ArtifactStagingDirectory)'
+    artifact: 'App'
+    publishLocation: 'pipeline'
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: ' $(rootDirectory)/Infrastructure'
     artifact: 'Infrastructure'
     publishLocation: 'pipeline'
