--- a/Services/DemoAPI/azure-build-pipelines.yml
+++ b/Services/DemoAPI/azure-build-pipelines.yml
@@ -4,13 +4,13 @@ trigger:
     - master
   paths:
     include:
-    - Services/RemoteMonitor.UI.Blazor/*
+    - Services/DemoAPI/*
 
 pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  rootDirectory: 'Services/RemoteMonitor.UI.Blazor'
+  rootDirectory: 'Services/DemoAPI'
 
 steps:
 
