--- a/Services/DemoAPI/azure-build-pipelines.yml
+++ b/Services/DemoAPI/azure-build-pipelines.yml
@@ -6,33 +6,73 @@ trigger:
     include:
     - Services/DemoAPI/*
 
-pool:
-  vmImage: 'ubuntu-latest'
-
 variables:
   rootDirectory: 'Services/DemoAPI'
+  azureSubscription: 'Demo Account'
+  resourceGroupName: 'demo-az-app-configuration'
+  region: 'eastus'
 
-steps:
+stages:
+- stage: Build
+  displayName: Build stage
 
-- task: DotNetCoreCLI@2
-  displayName: 'Function - Build project'
-  inputs:
-    projects: ' $(rootDirectory)/**/*.csproj'
-    arguments: '--output publish_output --configuration Release'
-- task: DotNetCoreCLI@2
-  displayName: 'Publish project'
-  inputs:
-    command: publish
-    publishWebProjects: false
-    projects: '$(rootDirectory)/**/*.csproj'
-    arguments: '--configuration Release --output $(build.artifactstagingdirectory)'
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(Build.ArtifactStagingDirectory)'
-    artifact: 'App'
-    publishLocation: 'pipeline'
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: ' Infrastructure'
-    artifact: 'Infrastructure'
-    publishLocation: 'pipeline'
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: $(vmImageName)
+    steps:
+
+    - task: DotNetCoreCLI@2
+      displayName: 'Function - Build project'
+      inputs:
+        projects: ' $(rootDirectory)/**/*.csproj'
+        arguments: '--output publish_output --configuration Release'
+    - task: DotNetCoreCLI@2
+      displayName: 'Publish project'
+      inputs:
+        command: publish
+        publishWebProjects: false
+        projects: '$(rootDirectory)/**/*.csproj'
+        arguments: '--configuration Release --output $(build.artifactstagingdirectory)'
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetPath: '$(Build.ArtifactStagingDirectory)'
+        artifact: 'App'
+        publishLocation: 'pipeline'
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetPath: ' Infrastructure'
+        artifact: 'Infrastructure'
+        publishLocation: 'pipeline'
+
+- stage: Deploy
+  displayName: Deploy stage
+
+  jobs:
+  - job: Deploy
+    displayName: Deploy
+    pool:
+      vmImage: $(vmImageName)
+
+    strategy:
+        runOnce:
+          deploy:
+  
+            steps:
+            - task: AzureCLI@2
+              displayName: '1. Deploy Azure Resources'
+              inputs:
+                azureSubscription: $(azureSubscription)
+                scriptType: bash
+                scriptLocation: inlineScript
+                inlineScript: |
+                  az deployment group create --resource-group $(resourceGroupName) --template-file $(Pipeline.Workspace)/build/Infrastructure/main.bicep --parameters appName=$(webAppName) location=$(region) > outputs.json
+
+            - task: AzureRmWebAppDeployment@4
+              displayName: '2. Azure App Service Deploy:'
+              inputs:
+                azureSubscription: $(azureSubscription)
+                WebAppName: $(webAppName)
+                package: '$(Pipeline.Workspace)/build/App/App.zip'
+                AppSettings: ''
