Update azure-build-pipelines.yml for Azure Pipelines

--- a/Services/DemoAPI/azure-build-pipelines.yml
+++ b/Services/DemoAPI/azure-build-pipelines.yml
@@ -11,6 +11,7 @@ variables:
   azureSubscription: 'Demo Account'
   resourceGroupName: 'demo-az-app-configuration'
   region: 'eastus'
+  vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
@@ -45,4 +46,33 @@ stages:
         targetPath: ' Infrastructure'
         artifact: 'Infrastructure'
         publishLocation: 'pipeline'
+- stage: Deploy
+  displayName: Deploy stage
 
+  jobs:
+  - job: Deploy
+    displayName: Deploy
+    pool:
+      vmImage: $(vmImageName)
+
+    strategy:
+        runOnce:
+          deploy:
+  
+            steps:
+            - task: AzureCLI@2
+              displayName: '1. Deploy Azure Resources'
+              inputs:
+                azureSubscription: $(azureSubscription)
+                scriptType: bash
+                scriptLocation: inlineScript
+                inlineScript: |
+                  az deployment group create --resource-group $(resourceGroupName) --template-file $(Pipeline.Workspace)/build/Infrastructure/main.bicep --parameters appName=$(webAppName) location=$(region) > outputs.json
+
+            - task: AzureRmWebAppDeployment@4
+              displayName: '2. Azure App Service Deploy:'
+              inputs:
+                azureSubscription: $(azureSubscription)
+                WebAppName: $(webAppName)
+                package: '$(Pipeline.Workspace)/build/App/App.zip'
+                AppSettings: ''
