--- a/Services/DemoAPI/azure-build-pipelines.yml
+++ b/Services/DemoAPI/azure-build-pipelines.yml
@@ -6,6 +6,9 @@ trigger:
     include:
     - Services/DemoAPI/*
 
+pool:
+      vmImage: 'ubuntu-latest'
+
 variables:
   rootDirectory: 'Services/DemoAPI'
   azureSubscription: 'Demo Account'
@@ -20,8 +23,6 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: $(vmImageName)
     steps:
 
     - task: DotNetCoreCLI@2
@@ -52,8 +53,6 @@ stages:
   jobs:
   - job: Deploy
     displayName: Deploy
-    pool:
-      vmImage: $(vmImageName)
 
     strategy:
         runOnce:
