Update azure-build-pipelines.yml for Azure Pipelines

--- a/Services/DemoAPI/azure-build-pipelines.yml
+++ b/Services/DemoAPI/azure-build-pipelines.yml
@@ -62,6 +62,13 @@ stages:
         runOnce:
           deploy:
              steps:
+              - task: CmdLine@2
+                inputs:
+                   script: |
+                     echo "Directory of Pipeline.Workspace:"
+                     tree $(Pipeline.Workspace)
+                displayName: 'Display Variables'
+                continueOnError: true
               - task: AzureCLI@2
                 displayName: '1. Deploy Azure Resources'
                 inputs:
