Update azure-build-pipelines.yml for Azure Pipelines

--- a/Services/DemoAPI/azure-build-pipelines.yml
+++ b/Services/DemoAPI/azure-build-pipelines.yml
@@ -83,5 +83,5 @@ stages:
                 inputs:
                   azureSubscription: $(azureSubscription)
                   WebAppName: $(webAppName)
-                  package: '$(Pipeline.Workspace)/App/App.zip'
+                  package: '$(Pipeline.Workspace)/App/WebAPI.zip'
                   AppSettings: ''
