--- a/Services/DemoAPI/WebAPI/appsettings.json
+++ b/Services/DemoAPI/WebAPI/appsettings.json
@@ -35,13 +35,13 @@
     "MaxDelayBeforeCacheIsMarkedDirtyInSeconds" :  30
   },
   "ApplicationInsights": {
-    "ConnectionString": "secrets.json",
+    "ConnectionString": "InstrumentationKey=78bdc45e-0494-4238-9888-90dfe1ad1024;IngestionEndpoint=https://eastus-0.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/",
     "EnableDependencyTrackingTelemetryModule": true,
     "EnableDependencyTrackingTelemetryModule:OnlyLogFailed": true,
     "EnablePerformanceCounterCollectionModule": false
   },
   "ConnectionStrings": {
-    "AppConfig": "secrets.json"
+    "AppConfig": "Endpoint=https://demo-az-app-configuration.azconfig.io;Id=oB5o-l0-s0:QOP7EwSSwWA26ehHr/vD;Secret=3cyWzw9mtyH88sPVKj7Qbl7IItI74K3f6hspL0O3hZA="
   },
   "API": {
     "Settings": {
