--- a/Services/DemoAPI/WebApp/appsettings.json
+++ b/Services/DemoAPI/WebApp/appsettings.json
@@ -1,4 +1,12 @@
 {
+
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "rutzscodev.onmicrosoft.com",
+    "TenantId": "40b65298-615e-4102-b51c-260f15448b28",
+    "ClientId": "70f60ff9-2b95-46fc-b680-03fcf374ea22",
+    "CallbackPath": "/signin-oidc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
